Principles: label alignment fixed

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -27,7 +27,8 @@
 }
 
 .d-layer {
-  max-width: 1174px;
+  /*max-width: 1174px;*/
+  max-width: none;
   margin: 0 auto;
   padding: 0 37px;
 
